--- a/TenderStore/Areas/Account/Pages/Register.cshtml
+++ b/TenderStore/Areas/Account/Pages/Register.cshtml
@@ -1,20 +1,18 @@
 ﻿@page
-@model TS.Endpoints.UI.Areas.Account.Pages.IndexModel
+@model TS.Endpoints.UI.Areas.Account.Pages.RegisterModel
 @{
     Layout = "_AccountLayout";
 }
-<!-- bread croumb -->
 <div class="content">
     <div class="container-fluid">
         <nav aria-label="breadcrumb" class="my-lg-0 my-2">
             <ol class="breadcrumb mb-0">
                 <li class="breadcrumb-item"><a href="#" class="font-14 text-muted">خانه</a></li>
-                <li class="breadcrumb-item active main-color-one-color font-14" aria-current="page">ورود</li>
+                <li class="breadcrumb-item active main-color-one-color font-14" aria-current="page">ثبت نام</li>
             </ol>
         </nav>
     </div>
 </div>
-
 
 <div class="content">
     <div class="container-fluid">
@@ -23,38 +21,33 @@
                 <div class="col-lg-6 col-xl-4 col-sm-8">
                     <div class="auth shadow-box rounded-4 p-4">
                         <div class="auth-content">
-                            <h3 class="font-20 text-center auth-title-form">ورود به فروشگاه</h3>
+                            <h3 class="font-20 text-center auth-title-form">ثبت نام در فروشگاه</h3>
                             <form action="" class="mt-3">
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control float-input" id="floatingInput"
-                                           placeholder="تلفن همره / ایمیل">
-                                    <label for="floatingInput">تلفن همره / ایمیل</label>
+                                    <input type="text" class="form-control float-input" id="floatingInputMobile"
+                                           placeholder="تلفن همراه">
+                                    <label for="floatingInputMobile">تلفن همراه</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="text" class="form-control float-input" id="floatingInputEmail"
+                                           placeholder="ایمیل">
+                                    <label for="floatingInputEmail">ایمیل</label>
                                 </div>
                                 <div class="form-floating mb-3">
                                     <input type="password" class="form-control float-input" id="floatingPassword"
                                            placeholder="کلمه عبور">
                                     <label for="floatingPassword">کلمه عبور</label>
                                 </div>
-                                <div class="row gy-3 mb-3">
-                                    <div class="col-sm-6">
-                                        <div class="form-check form-switch">
-                                            <input class="form-check-input" type="checkbox" id="rememberME">
-                                            <label class="form-check-label" for="rememberME">
-                                                مرا به خاطر
-                                                بسپار
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <div class="form-group text-sm-end text-start">
-                                            <a href="" class="text-primary">فراموشی رمز عبور</a>
-                                        </div>
-                                    </div>
+                                <div class="form-floating mb-3">
+                                    <input type="password" class="form-control float-input" id="floatingPasswordRe"
+                                           placeholder="تکرار کلمه عبور">
+                                    <label for="floatingPasswordRe">تکرار کلمه عبور</label>
                                 </div>
                                 <div class="form-group">
                                     <button type="submit"
                                             class="btn main-color-three-bg border-0 rounded-pill w-100 text-white waves-effect waves-light">
-                                        ورود
+                                        ثبت
+                                        نام
                                     </button>
                                 </div>
                             </form>
@@ -62,7 +55,7 @@
                                 <span>یا</span>
                             </div>
                             <div class="d-flex justify-content-center">
-                                <a asp-page="/Register">عضو نیستی؟ ثبت نام در فروشگاه</a>
+                                <a asp-page="/Index">حساب کاربری دارم ! ورود به فروشگاه</a>
                             </div>
                         </div>
                     </div>
