--- a/TenderStore/Areas/Admin/Pages/UsersAdmin/UsersList.cshtml
+++ b/TenderStore/Areas/Admin/Pages/UsersAdmin/UsersList.cshtml
@@ -1,5 +1,63 @@
-﻿@page
+﻿@page "/Admin/UsersList"
 @model TS.Endpoints.UI.Areas.Admin.UsersAdmin.UsersListModel
 @{
     Layout = "_LayoutAdmin";
 }
+
+<div class="row">
+    <div class="col-12">
+
+        <div class="box">
+            <div class="box-header with-border">
+                <h3 class="box-title">لیست  کاربران</h3>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body">
+                <div class="table-responsive">
+                    <table id="example5" class="table table-bordered table-striped"
+                           style="width:100%">
+                        <thead>
+
+                            <tr>
+                                <th>نام</th>
+                                <th>نام خانوادگی</th>
+                                <th>شماره تماس</th>
+                                <th>ایمیل</th>
+                                <th>فعال</th>
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.Users)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Family)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.PhoneNumber)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Email)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.IsActive)
+                                    </td>
+                                    <td>
+                                        <a asp-page-handler="Edit" asp-page="EditUser" asp-route-id="@item.Id">Edit</a>
+                                    </td>
+                                </tr>
+                            }
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!-- /.box-body -->
+        </div>
+        <!-- /.box -->
+    </div>
+</div>
