--- a/TenderStore/Areas/Admin/Pages/_ViewImports.cshtml
+++ b/TenderStore/Areas/Admin/Pages/_ViewImports.cshtml
@@ -1,5 +1,3 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using TenderStore
+@namespace TenderStore.Pages
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
