--- a/TenderStore/Areas/Account/Pages/Index.cshtml
+++ b/TenderStore/Areas/Account/Pages/Index.cshtml
@@ -24,16 +24,16 @@
                     <div class="auth shadow-box rounded-4 p-4">
                         <div class="auth-content">
                             <h3 class="font-20 text-center auth-title-form">ورود به فروشگاه</h3>
-                            <form action="" class="mt-3">
+                            <form asp-page-handler="Index" class="mt-3">
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control float-input" id="floatingInput"
-                                           placeholder="تلفن همره / ایمیل">
-                                    <label for="floatingInput">تلفن همره / ایمیل</label>
+                                    <input name="Email" type="text" class="form-control float-input" id="Email"
+                                           placeholder="ایمیل">
+                                    <label for="floatingInput">ایمیل</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                    <input type="password" class="form-control float-input" id="floatingPassword"
+                                    <input name="Password" type="password" class="form-control float-input" id="Password"
                                            placeholder="کلمه عبور">
-                                    <label for="floatingPassword">کلمه عبور</label>
+                                    <label for="Password">کلمه عبور</label>
                                 </div>
                                 <div class="row gy-3 mb-3">
                                     <div class="col-sm-6">
