--- a/TenderStore/Areas/Account/Pages/Register.cshtml
+++ b/TenderStore/Areas/Account/Pages/Register.cshtml
@@ -22,26 +22,26 @@
                     <div class="auth shadow-box rounded-4 p-4">
                         <div class="auth-content">
                             <h3 class="font-20 text-center auth-title-form">ثبت نام در فروشگاه</h3>
-                            <form action="" class="mt-3">
+                            <form method="post" asp-page-handler="Create" class="mt-3">
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control float-input" id="floatingInputMobile"
+                                    <input name="PhoneNumber" type="text" class="form-control float-input" id="PhoneNumber"
                                            placeholder="تلفن همراه">
                                     <label for="floatingInputMobile">تلفن همراه</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control float-input" id="floatingInputEmail"
+                                    <input name="Email" type="text" class="form-control float-input" id="Email"
                                            placeholder="ایمیل">
                                     <label for="floatingInputEmail">ایمیل</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                    <input type="password" class="form-control float-input" id="floatingPassword"
+                                    <input type="password" name="Password" class="form-control float-input" id="Password"
                                            placeholder="کلمه عبور">
-                                    <label for="floatingPassword">کلمه عبور</label>
+                                    <label for="Password">کلمه عبور</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                    <input type="password" class="form-control float-input" id="floatingPasswordRe"
+                                    <input name="ConfirmPassword" type="password" class="form-control float-input" id="ConfirmPassword"
                                            placeholder="تکرار کلمه عبور">
-                                    <label for="floatingPasswordRe">تکرار کلمه عبور</label>
+                                    <label for="ConfirmPassword">تکرار کلمه عبور</label>
                                 </div>
                                 <div class="form-group">
                                     <button type="submit"
