--- a/TenderStore/Areas/Admin/Pages/Shared/_LayoutAdmin.cshtml
+++ b/TenderStore/Areas/Admin/Pages/Shared/_LayoutAdmin.cshtml
@@ -215,7 +215,7 @@
 										تنظیمات
 									</a>
 									<div class="dropdown-divider"></div>
-									<a class="dropdown-item" href="#"><i class="ti-lock text-muted mr-2"></i> خروج</a>
+									<a class="dropdown-item" asp-page-handler="Logout"><i class="ti-lock text-muted mr-2"></i> خروج</a>
 								</li>
 							</ul>
 						</li>
