--- a/TenderStore/Areas/Admin/Pages/Shared/_LayoutAdmin.cshtml
+++ b/TenderStore/Areas/Admin/Pages/Shared/_LayoutAdmin.cshtml
@@ -69,11 +69,11 @@
 	<title>پنل مدیر سیستم فروشگاه</title>
 
 	<!-- Vendors Style-->
-	<link rel="stylesheet" href="~/css/vendors_css.css">
+	<link rel="stylesheet" href="~/admin/css/vendors_css.css">
 
 	<!-- Style-->
-	<link rel="stylesheet" href="~/css/style.css">
-	<link rel="stylesheet" href="~/css/skin_color.css">
+	<link rel="stylesheet" href="~/admin/css/style.css">
+	<link rel="stylesheet" href="~/admin/css/skin_color.css">
 
 </head>
 
@@ -826,17 +826,17 @@
 	</div>
 	<!-- ./wrapper -->
 	<!-- Vendor JS -->
-	<script src="~/js/vendors.min"></script>
+	<script src="~/admin/js/vendors.min"></script>
 	<script src="~/assets/icons/feather-icons/feather.min.js"></script>
 	<script src="~/assets/vendor_components/easypiechart/dist/jquery.easypiechart.js"></script>
 	<script src="~/assets/vendor_components/apexcharts-bundle-rtl/irregular-data-series.js"></script>
 	<script src="~/assets/vendor_components/apexcharts-bundle-rtl/dist/apexcharts.js"></script>
 	<script src="~/assets/vendor_components/datatable/datatables.min.js"></script>
-	<script src="~/js/pages/data-table.js"></script>
+	<script src="~/admin/js/pages/data-table.js"></script>
 
 	<!-- Sunny Admin App -->
-	<script src="~/js/template.js"></script>
-	<script src="~/js/pages/dashboard.js"></script>
+	<script src="~/admin/js/template.js"></script>
+	<script src="~/admin/js/pages/dashboard.js"></script>
 
 
 </body>
